--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -18,7 +18,8 @@ jobs:
 
      // We did not check node_modules directory to GitHub so we need to install dependencies
       - name: Install dependencies
-        run: npm install webdriverio
+        run: |
+          npm install webdriverio
 
         
       - name: run appium android tests
