--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -18,8 +18,7 @@ jobs:
 
      // We did not check node_modules directory to GitHub so we need to install dependencies
       - name: Install dependencies
-        run: |
-          npm install @wdio/cli
+        run: npm install @wdio/cli
 
         
       - name: run appium android tests
