--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -11,7 +11,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install @wdio/cli
+        run: npm install
+
+      - name: Install UIAutomator2
+        run: npm install appium-uiautomator2-driver
 
       - name: setup appium
         run: |
