--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@wdio/cli": "^8.3.10",
     "@wdio/cucumber-framework": "^8.3.0",
     "@wdio/local-runner": "^8.3.10",
-    "@wdio/spec-reporter": "^8.3.0",
-    "appium": "^1.22.3"
+    "@wdio/spec-reporter": "^8.3.0"
   }
 }
