--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@wdio/cli": "^8.3.10",
     "@wdio/cucumber-framework": "^8.3.0",
     "@wdio/local-runner": "^8.3.10",
-    "@wdio/spec-reporter": "^8.3.0"
+    "@wdio/spec-reporter": "^8.3.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   }
 }
