--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "@wdio/spec-reporter": "^8.3.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "appium-uiautomator2-driver": "^2.12.6"
   }
 }
