--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      - name: pull the proejct into the runner
+      - name: pull the project into the runner
         uses: actions/checkout@v3
 
       - name: Install dependencies
@@ -17,13 +17,12 @@ jobs:
         run: |
           npm install -g appium@next
           appium -v
-          appium &>/dev/null &
           
-
-      - name: Install UIAutomator2
+      - name: Install UIAutomator2 and run Appium
         run: |
           appium driver install uiautomator2
           appium driver list --installed
+          appium &>/dev/null &
 
       - name: run appium android tests
         uses: reactivecircus/android-emulator-runner@v2
