Uninstall uiautomator2.server

--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -25,6 +25,8 @@ jobs:
           appium driver install uiautomator2
           appium driver list --installed
           appium -p 4723 &>/dev/null &
+          adb uninstall io.appium.uiautomator2.server     
+          adb uninstall io.appium.uiautomator2.server.test
 
       - name: run appium android tests
         uses: reactivecircus/android-emulator-runner@v2
