--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -7,6 +7,9 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      - name: Change timezone
+        uses: sudo ln -sf /usr/share/zoneinfo/Africa/Johannesburg /etc/localtime
+
       - name: pull the project into the runner
         uses: actions/checkout@v3
 
@@ -30,4 +33,6 @@ jobs:
         uses: reactivecircus/android-emulator-runner@v2
         with:
           api-level: 29
+          target: google_apis
+          arch: x86_64
           script: npm run android
