--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -3,7 +3,7 @@ name: run android tests in Github runner
 on: push
 
 jobs: 
-  run-mobile-tests:
+  run-android-mobile-tests:
     runs-on: macos-latest
 
     steps:
@@ -26,15 +26,16 @@ jobs:
           appium driver install xcuitest
           appium driver list --installed
           appium -a 127.0.0.1 -p 4723 &>/dev/null &
-          
-      #  uses: reactivecircus/android-emulator-runner@v2
-      #  with:
-      #    api-level: 30
-      #    target: google_apis
-      #    arch: x86_64
-      #    script: npm run android
-      - name: run appium android tests
-        uses: futureware-tech/simulator-action@v2
+
+      - name: run appium android tests          
+        uses: reactivecircus/android-emulator-runner@v2
         with:
-          model: 'iPhone 14'
-      - run: npm run ios
+          api-level: 30
+          target: google_apis
+          arch: x86_64
+          script: npm run android
+
+      #  uses: futureware-tech/simulator-action@v2
+      #  with:
+      #    model: 'iPhone 14'
+      #- run: npm run ios
