--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@wdio/local-runner": "^8.3.10",
     "@wdio/spec-reporter": "^8.3.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.5",
-    "appium": "^1.22.3"
+    "typescript": "^4.9.5"
   }
 }
