update package.json and yml file

--- a/.github/workflows/demo-android.yml
+++ b/.github/workflows/demo-android.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: setup appium
         run: |
-          npm install -g appium@next
+          npm i --save-dev appium@next
           
       - name: Check appium version
         run: appium -v
