--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@wdio/cucumber-framework": "^8.3.0",
     "@wdio/local-runner": "^8.3.10",
     "@wdio/spec-reporter": "^8.3.0",
+    "appium": "^2.0.0-beta.56",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
